--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <body>
     <div id="contenedor">
       <div id="encabezado">Div Encabezado</div>
-      <div class="hijo">Div hijo</div>
-      <div class="hijo">Div hijo</div>
-      <div id="hijoDos">Div hijo dos</div>
-      <div id="hijoTres">Div hijo tres</div>
-      <div id="hijoTres">Div hijo tres</div>
+      <div id="hijos">
+        <div class="hijo">Div hijo</div>
+        <div class="hijo">Div hijo</div>
+        <div class="hijoDos">Div hijo dos</div>
+        <div class="hijoTres">Div hijo tres</div>
+        <div class="hijoTres"">Div hijo tres</div>
+      </div>
       <div id="pie">Div Pie</div>
     </div>
   </body>
