--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="contenedor">
       <div id="encabezado">Div Encabezado</div>
-      <div id="hijos">
+      <div id="cuerpo">
         <div class="hijo">Div hijo</div>
         <div class="hijo">Div hijo</div>
         <div class="hijoDos">Div hijo dos</div>
